# RAG

./: LICENSE  PROJECT_ANALYSIS.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  working_project.md
data/text_value/: machine_learning.txt
data/vector_store/: chroma.sqlite3
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf.ipynb
src/: __init__.py  data_loader.py  embedding.py  search.py  vector_store.py
src/rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
